--- a/basics2.html
+++ b/basics2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Forms</h1>
-   <form>
+   <form action="https://www.facebook.com" method="GET">
        <h3>LOG in:</h3>
        <h3>Enter your details:</h3>
        <input type="email" name="username" value="email here">
