--- a/basics2.html
+++ b/basics2.html
@@ -18,6 +18,11 @@
        <input type="color">
        <h3>Enter some text</h3>
        <input type="text"> 
+        
+       <lable>
+           <h1>Enter some text:<input type="text"></h1>
+         </lable>
+       
    </form>
 </body>
 </html>
